# sist_encastants

./: README.md
control/: CMakeLists.txt
control-p3/launch/: control_sim.launch
control-p3/scripts/: pid_node.py
control/launch/: control_sim.launch
control/scripts/: pid_node.py
practica3/: package.xml
practica3/launch/: control_sim.launch
practica3/scripts/: pid_node.py  pid_node2.py
ros_sharp_driver/: CMakeLists.txt  package.xml
ros_sharp_driver/arduino/sharp_range/: sharp_range.ino
ros_sharp_driver/scripts/: sharp_driver.py
sens_prafin/: perceptro.py  practica3.py
tf_sim/: CMakeLists.txt  package.xml
tf_sim/launch/: system_sim.launch
tf_sim/scripts/: plant_sim_node.py  step_sim_node.py  system_sim_node.py
